--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "build": "sam build -t CloudFormation.yaml",
     "deploy:dev": "npm run build && npm run package:dev && npm run deploy:packaged:dev",
     "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
+    "local:basecamp-token": "npm run build && sam local invoke BasecampTokenFunction -e basecamp-token/event.json",
     "local:jobcodes": "npm run build && sam local invoke JobcodesFunction -e jobcodes/event.json",
     "local:pto-balances": "npm run build && sam local invoke PTOBalancesFunction -e pto-balances/event.json",
     "local:time-sheets": "npm run build && sam local invoke TimeSheetsFunction -e time-sheets/event.json",
     "local:twitter-token": "npm run build && sam local invoke TwitterTokenFunction -e twitter-token/event.json",
-    "local:basecamp-token": "npm run build && sam local invoke BasecampTokenFunction -e basecamp-token/event.json",
     "package:dev": "sam package --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --output-template-file packaged.yaml",
+    "reinstall": "npm ci && cd basecamp-token && npm ci && cd ../jobcodes && npm ci && cd ../pto-balances && npm ci && cd ../time-sheets && npm ci && cd ../twitter-token && npm ci",
+    "tail:dev:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-dev --tail",
+    "tail:dev:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-dev --tail",
     "tail:dev:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-dev --tail",
     "tail:dev:time-sheets": "sam logs -n TimeSheetsFunction --stack-name mysterio-dev --tail",
+    "tail:dev:twitter-token": "sam logs -n TwitterTokenFunction --stack-name mysterio-dev --tail",
     "test": "jasmine",
     "validate": "npm ls"
   },
