--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "scripts": {
     "build": "sam build -t CloudFormation.yaml",
     "deploy:dev": "npm run build && npm run package:dev && npm run deploy:packaged:dev",
-    "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
+    "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
     "deploy:test": "npm run build && npm run package:test && npm run deploy:packaged:test",
-    "deploy:packaged:test": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-test --s3-prefix mysterio-test --stack-name mysterio-test --parameter-overrides Stage=test",
+    "deploy:packaged:test": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-test --stack-name mysterio-test --parameter-overrides Stage=test",
     "deploy:prod": "npm run build && npm run package:prod && npm run deploy:packaged:prod",
-    "deploy:packaged:prod": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --stack-name mysterio-prod --parameter-overrides Stage=prod",
+    "deploy:packaged:prod": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --stack-name mysterio-prod --parameter-overrides Stage=prod --profile prod",
     "local:basecamp-token": "npm run build && sam local invoke BasecampTokenFunction -e basecamp-token/event.json",
     "local:jobcodes": "npm run build && sam local invoke JobcodesFunction -e jobcodes/event.json",
     "local:pto-balances": "npm run build && sam local invoke PTOBalancesFunction -e pto-balances/event.json",
     "local:time-sheets": "npm run build && sam local invoke TimeSheetsFunction -e time-sheets/event.json",
     "local:twitter-token": "npm run build && sam local invoke TwitterTokenFunction -e twitter-token/event.json",
-    "package:dev": "sam package --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-dev --output-template-file packaged.yaml",
-    "package:test": "sam package --s3-bucket case-consulting-sam-deployments-test --s3-prefix mysterio-test --output-template-file packaged.yaml",
-    "package:prod": "sam package --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --output-template-file packaged.yaml",
+    "package:dev": "sam package --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --output-template-file packaged.yaml",
+    "package:test": "sam package --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-test --output-template-file packaged.yaml",
+    "package:prod": "sam package --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --output-template-file packaged.yaml --profile prod",
     "reinstall": "npm ci && cd basecamp-token && npm ci && cd ../jobcodes && npm ci && cd ../pto-balances && npm ci && cd ../time-sheets && npm ci && cd ../twitter-token && npm ci",
     "tail:dev:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-dev --tail",
     "tail:dev:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-dev --tail",
@@ -32,11 +32,11 @@
     "tail:test:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-test --tail",
     "tail:test:time-sheets": "sam logs -n TimeSheetsFunction --stack-name mysterio-test --tail",
     "tail:test:twitter-token": "sam logs -n TwitterTokenFunction --stack-name mysterio-test --tail",
-    "tail:prod:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-prod --tail",
-    "tail:prod:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-prod --tail",
-    "tail:prod:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-prod --tail",
-    "tail:prod:time-sheets": "sam logs -n TimeSheetsFunction --stack-name mysterio-prod --tail",
-    "tail:prod:twitter-token": "sam logs -n TwitterTokenFunction --stack-name mysterio-prod --tail",
+    "tail:prod:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-prod --tail --profile prod",
+    "tail:prod:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-prod --tail --profile prod",
+    "tail:prod:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-prod --tail --profile prod",
+    "tail:prod:time-sheets": "sam logs -n TimeSheetsFunction --stack-name mysterio-prod --tail --profile prod",
+    "tail:prod:twitter-token": "sam logs -n TwitterTokenFunction --stack-name mysterio-prod --tail --profile prod",
     "test": "jasmine",
     "validate": "npm ls"
   },
