--- a/time-sheets/package.json
+++ b/time-sheets/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "^2.715.0",
     "axios": "^0.19.2",
-    "lodash": "^4.17.19"
+    "lodash": "^4.17.19",
+    "moment": "^2.27.0"
   }
 }
