1211: Set time-zone for moment to America/New_York

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jasmine": "^3.5.0"
   },
   "dependencies": {
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31"
   }
 }
