--- a/monthly-hours/package.json
+++ b/monthly-hours/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "^2.715.0",
     "axios": "^0.19.2",
     "lodash": "^4.17.19",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31"
   }
 }
