--- a/monthly-hours/package.json
+++ b/monthly-hours/package.json
@@ -7,7 +7,7 @@
   "main": "app.js",
   "dependencies": {
     "aws-sdk": "^2.906.0",
-    "axios": "^0.21.1",
+    "axios": "0.24.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33"
