--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "sam build -t CloudFormation.yaml",
     "deploy:dev": "npm run build && npm run package:dev && npm run deploy:packaged:dev",
-    "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
+    "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
     "deploy:test": "npm run build && npm run package:test && npm run deploy:packaged:test",
-    "deploy:packaged:test": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-test --stack-name mysterio-test --parameter-overrides Stage=test",
+    "deploy:packaged:test": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-test --stack-name mysterio-test --parameter-overrides Stage=test",
     "deploy:prod": "npm run build && npm run package:prod && npm run deploy:packaged:prod",
     "deploy:packaged:prod": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --stack-name mysterio-prod --parameter-overrides Stage=prod --profile prod",
     "local:basecamp-token": "npm run build && sam local invoke BasecampTokenFunction -e basecamp-token/event.json",
@@ -18,9 +18,9 @@
     "local:pto-balances": "npm run build && sam local invoke PTOBalancesFunction -e pto-balances/event.json",
     "local:monthly-hours": "npm run build && sam local invoke MonthlyHoursFunction -e monthly-hours/event.json",
     "local:twitter-token": "npm run build && sam local invoke TwitterTokenFunction -e twitter-token/event.json",
-    "package:dev": "sam package --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --output-template-file packaged.yaml",
-    "package:test": "sam package --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-test --output-template-file packaged.yaml",
-    "package:prod": "sam package --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --output-template-file packaged.yaml --profile prod",
+    "package:dev": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-dev --output-template-file packaged.yaml",
+    "package:test": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-test --output-template-file packaged.yaml",
+    "package:prod": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --output-template-file packaged.yaml --profile prod",
     "reinstall": "npm ci && cd basecamp-token && npm ci && cd ../jobcodes && npm ci && cd ../pto-balances && npm ci && cd ../monthly-hours && npm ci && cd ../twitter-token && npm ci",
     "tail:dev:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-dev --tail",
     "tail:dev:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-dev --tail",
