--- a/basecamp-token/package.json
+++ b/basecamp-token/package.json
@@ -6,8 +6,8 @@
   "author": "Case Consulting",
   "main": "app.js",
   "dependencies": {
-    "aws-sdk": "^2.1073.0",
-    "axios": "0.25.0",
-    "lodash": "^4.17.21"
+    "aws-sdk": "2.1157.0",
+    "axios": "0.27.2",
+    "lodash": "4.17.21"
   }
 }
