--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "validate": "npm ls"
   },
   "dependencies": {
-    "moment": "^2.29.2",
-    "moment-timezone": "^0.5.34"
+    "moment": "2.29.3",
+    "moment-timezone": "0.5.34"
   },
   "devDependencies": {
-    "jasmine": "^3.99.0"
+    "jasmine": "3.99.0"
   }
 }
