--- a/monthly-hours/package.json
+++ b/monthly-hours/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "2.1268.0",
     "axios": "0.27.2",
+    "dayjs": "1.11.7",
     "lodash": "4.17.21",
     "moment": "2.29.4",
     "moment-timezone": "0.5.38"
