POR-2207: Add FireTeam Quickbooks data to the Portal

--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -105,7 +105,9 @@ Resources:
             - Action:
                 - ssm:GetParameter*
               Effect: Allow
-              Resource: !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/TSheets/accessToken
+              Resource:
+                - !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/TSheets/accessToken
+                - !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/TSheets/FireTeam/accessToken
         - Statement:
             - Action:
                 - logs:CreateLogGroup
@@ -156,7 +158,9 @@ Resources:
             - Action:
                 - ssm:GetParameter*
               Effect: Allow
-              Resource: !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/TSheets/accessToken
+              Resource:
+                - !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/TSheets/accessToken
+                - !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/TSheets/FireTeam/accessToken
         - Statement:
             - Action:
                 - logs:CreateLogGroup
