POR-2264-mysterio-aws-v3-upgrade: upgraded

--- a/twitter-token/package.json
+++ b/twitter-token/package.json
@@ -6,6 +6,6 @@
   "author": "Case Consulting",
   "main": "app.js",
   "dependencies": {
-    "aws-sdk": "2.1268.0"
+    "@aws-sdk/client-ssm": "3.379.1"
   }
 }
