--- a/pto-balances/package.json
+++ b/pto-balances/package.json
@@ -6,7 +6,7 @@
   "author": "Case Consulting",
   "main": "app.js",
   "dependencies": {
-    "aws-sdk": "2.1268.0",
+    "@aws-sdk/client-ssm": "3.379.1",
     "axios": "0.27.2",
     "lodash": "4.17.21"
   }
