--- a/bamboohr-employees/package.json
+++ b/bamboohr-employees/package.json
@@ -4,9 +4,5 @@
   "private": true,
   "description": "Retrieves employees with a list of parameters from BambooHR",
   "author": "Case Consulting",
-  "main": "app.js",
-  "dependencies": {
-    "@aws-sdk/client-ssm": "3.379.1",
-    "axios": "0.27.2"
-  }
+  "main": "app.js"
 }
