--- a/basecamp-token/package.json
+++ b/basecamp-token/package.json
@@ -4,10 +4,5 @@
   "private": true,
   "description": "Generates a new access token to access the Case Basecamp API",
   "author": "Case Consulting",
-  "main": "app.js",
-  "dependencies": {
-    "@aws-sdk/client-ssm": "3.379.1",
-    "axios": "0.27.2",
-    "lodash": "4.17.21"
-  }
+  "main": "app.js"
 }
