--- a/package.json
+++ b/package.json
@@ -17,26 +17,22 @@
     "local:jobcodes": "npm run build && sam local invoke JobcodesFunction -e jobcodes/event.json",
     "local:pto-balances": "npm run build && sam local invoke PTOBalancesFunction -e pto-balances/event.json",
     "local:monthly-hours": "npm run build && sam local invoke MonthlyHoursFunction -e monthly-hours/event.json",
-    "local:twitter-token": "npm run build && sam local invoke TwitterTokenFunction -e twitter-token/event.json",
     "package:dev": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-dev --output-template-file packaged.yaml",
     "package:test": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-test --output-template-file packaged.yaml",
     "package:prod": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --output-template-file packaged.yaml --profile prod",
-    "reinstall": "npm ci && cd basecamp-token && npm ci && cd ../jobcodes && npm ci && cd ../pto-balances && npm ci && cd ../monthly-hours && npm ci && cd ../twitter-token && npm ci && cd ../bamboohr-employees && npm ci && cd ../update-bamboohr-employee && npm ci && cd ../adp-token && npm ci && cd ../adp-employees && npm ci && cd ../adp-update-employee && npm ci",
+    "reinstall": "npm ci && (cd layers/dependencies/nodejs && npm ci) && (cde layers/shared/nodejs && npm ci)",
     "tail:dev:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-dev --tail",
     "tail:dev:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-dev --tail",
     "tail:dev:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-dev --tail",
     "tail:dev:monthly-hours": "sam logs -n MonthlyHoursFunction --stack-name mysterio-dev --tail",
-    "tail:dev:twitter-token": "sam logs -n TwitterTokenFunction --stack-name mysterio-dev --tail",
     "tail:test:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-test --tail",
     "tail:test:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-test --tail",
     "tail:test:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-test --tail",
     "tail:test:monthly-hours": "sam logs -n MonthlyHoursFunction --stack-name mysterio-test --tail",
-    "tail:test:twitter-token": "sam logs -n TwitterTokenFunction --stack-name mysterio-test --tail",
     "tail:prod:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-prod --tail --profile prod",
     "tail:prod:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-prod --tail --profile prod",
     "tail:prod:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-prod --tail --profile prod",
     "tail:prod:monthly-hours": "sam logs -n MonthlyHoursFunction --stack-name mysterio-prod --tail --profile prod",
-    "tail:prod:twitter-token": "sam logs -n TwitterTokenFunction --stack-name mysterio-prod --tail --profile prod",
     "test": "jasmine",
     "validate": "npm ls"
   },
