--- a/pto-balances/package.json
+++ b/pto-balances/package.json
@@ -4,10 +4,5 @@
   "private": true,
   "description": "Retrieves PTO balances from TSheets API for given user",
   "author": "Case Consulting",
-  "main": "app.js",
-  "dependencies": {
-    "@aws-sdk/client-ssm": "3.379.1",
-    "axios": "0.27.2",
-    "lodash": "4.17.21"
-  }
+  "main": "app.js"
 }
