POR-2294: finished logic for syncing between the portal adp and bamboo without fully testing

--- a/layers/shared/nodejs/package.json
+++ b/layers/shared/nodejs/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "dateUtils": "file:dateUtils.js"
+    "dateUtils": "file:dateUtils.js",
+    "utils": "file:utils.js"
   }
 }
