--- a/layers/dependencies/nodejs/package.json
+++ b/layers/dependencies/nodejs/package.json
@@ -5,6 +5,7 @@
     "axios": "0.27.2",
     "dayjs": "1.11.7",
     "lodash": "4.17.21",
-    "qs": "6.11.2"
+    "qs": "6.11.2",
+    "xml2js": "0.6.2"
   }
 }
